# douyin_recorder_workspace

./: .gitattributes  .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  backup.bat  diagnostics.bat  maintenance.bat  operations.bat  pyproject.toml  start.bat  update.bat  verify.bat
.github/: p1a-resolver-materialize.py  p1b-payload-placeholder  p1b-retrigger-core.txt  p2a-payload-pointer.txt
app/: __init__.py  bootstrap.py  main.py  paths.py  runtime.py  security.py  settings.py  state.py
config/: config.json.default  runtime.env.default
docs/: BASELINE_ARTIFACTS.md  BASELINE_COMMIT.txt  FINAL_IMPLEMENTATION_REPORT.json  FINAL_IMPLEMENTATION_REPORT.md  GITHUB_WORKFLOW.md  IMPLEMENTATION_WINDOW_PROMPT.md  P0_IMPLEMENTATION_REPORT.md  P1A_IMPLEMENTATION_PLAN.md  P1A_IMPLEMENTATION_REPORT.md  P1B_IMPLEMENTATION_PLAN.md  P1B_IMPLEMENTATION_REPORT.md  P1B_TEST_MATRIX.md  P1C_IMPLEMENTATION_PLAN.md  P1C_IMPLEMENTATION_REPORT.md  P1D_IMPLEMENTATION_PLAN.md  P1D_IMPLEMENTATION_REPORT.md  P2A_IMPLEMENTATION_PLAN.md  P2A_IMPLEMENTATION_REPORT.md  P3A_IMPLEMENTATION_PLAN.md  P3A_IMPLEMENTATION_REPORT.md  P4A_RELEASE_PLAN.md  P4A_RELEASE_REPORT.md  PRE_IMPLEMENTATION_REVIEW.md  RELEASE_PROMOTION.md  V0.1.1_IMPLEMENTATION_REPORT.md
packaging/: release-lock.json
tools/: __init__.py  _bootstrap.py  backup_restore_smoke.py  backup_runtime.py  create_recovery_assets.py  database_integrity_check.py  database_maintenance.py  database_maintenance_smoke.py  diagnostics_report.py  douyin_browser_probe.py  douyin_interactive_evidence.py  douyin_network_probe.py  start_info.py  (+13 more)
(+181 files in other folders)
