[project]
name = "douyin-recorder-workspace"
version = "0.2.0"
description = "Python single-host Douyin group-live recording workspace"
requires-python = ">=3.12,<3.14"
dependencies = [
  "aiosqlite==0.21.0",
  "fastapi==0.128.2",
  "httpx==0.28.1",
  "protobuf==6.33.6",
  "uvicorn==0.48.0",
  "websockets==16.0",
]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["app/douyin/generated"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
